--- a/css/style.css
+++ b/css/style.css
@@ -388,11 +388,9 @@ body {
 .header__number {
   margin-block-start: 0;
   margin-block-end: 0;
-  font-family: "Gilroy";
-  font-style: normal;
   font-weight: 400;
-  line-height: 21px;
   font-size: 18px;
+  line-height: 21px;
   color: #000000;
   display: flex;
   align-items: center;
@@ -435,11 +433,9 @@ body {
 }
 .header__list__item {
   display: inline-block;
-  font-family: "Gilroy";
-  font-style: normal;
   font-weight: 500;
-  line-height: 21px;
   font-size: 18px;
+  line-height: 21px;
   color: #4F4F4F;
   text-decoration: none;
 }
@@ -458,11 +454,9 @@ body {
   align-items: center;
 }
 .header__search__input {
-  font-family: "Gilroy";
-  font-style: normal;
   font-weight: 400;
-  line-height: 21px;
   font-size: 18px;
+  line-height: 21px;
   color: #828282;
   background: #F2F2F2;
   border: none;
@@ -472,35 +466,40 @@ body {
   outline: none;
 }
 
+.shopping-cart {
+  width: 35px;
+  height: 38px;
+  margin-right: 15px;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+}
+
+.number_of_products {
+  position: absolute;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #06D10E;
+  line-height: 1;
+  color: #FFFFFF;
+}
+
+.account a {
+  display: inline-block;
+}
+
 .arrow:after {
   content: url(../assets/svg/стрелка-вниз.svg);
   display: inline-block;
   width: 15px;
   height: 15px;
   margin-left: 4px;
-}
-
-.shopping-cart {
-  width: 35px;
-  height: 38px;
-  margin-right: 15px;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-}
-
-.shopping-cart:after {
-  position: absolute;
-  content: "";
-  background-image: url(../assets/svg/number.svg);
-  top: 0;
-  right: 0;
-  width: 20px;
-  height: 20px;
-}
-
-.account a {
-  display: inline-block;
 }
 
 .main {
