--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,23 +5,23 @@
     &__inner {
         padding: 33px 0 30px 0;
     }
-
+    
     &__top {
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin-bottom: 42px;
     }
-
+    
     &__top-img a {
         display: inline-block;
     }
-
+    
     &__top-img__item {
         width: 244px;
         height: 45px;
     }
-
+    
     &__top-icons {
         display: flex;
         align-items: center;
@@ -36,8 +36,9 @@
     &__number {
         margin-block-start: 0;
         margin-block-end: 0;
-        @include fontsSetting('Gilroy',normal,400,21px);
-        font-size: map.get($font-size, "regular");
+        font-weight: 400;
+        font-size: map.get($font-size,"regular");
+        line-height: 21px;
         color: #000000;
         display: flex;
         align-items: center;
@@ -51,12 +52,14 @@
         height: 24px;
         margin-right: 9px;
     }
-
+    
     &__top-icons__shopping-cart {
         width: 30px;
         height: 30px;
     }
-
+    
+ 
+    
     &__top-icons__account {
         width: 30px;
         height: 30px;
@@ -88,8 +91,9 @@
     
     &__list__item {
         display: inline-block;
-        @include fontsSetting('Gilroy',normal,500,21px);
-        font-size:map.get($font-size, "regular");
+        font-weight: 500;
+        font-size: map.get($font-size,"regular");
+        line-height: 21px;
         color: #4F4F4F;
         text-decoration: none;
     }
@@ -111,8 +115,9 @@
     }
     
     &__search__input {
-        @include fontsSetting('Gilroy',normal,400,21px);
-        font-size: map.get($font-size, "regular");
+        font-weight: 400;
+        font-size: map.get($font-size,"regular");
+        line-height: 21px;
         color: #828282;
         background: #F2F2F2;
         border: none;
@@ -122,34 +127,36 @@
         outline: none;
     }
 }
+.shopping-cart {
+    width: 35px;
+    height: 38px;
+    margin-right: 15px;
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+}
 
+.number_of_products {
+    position: absolute;
+     display: inline-flex;
+     align-items: center;
+     justify-content: center;
+     top: 0;
+     right: 0;
+     width: 20px;
+     height: 20px;
+     border-radius: 50%;
+     background-color: #06D10E;
+     line-height:1;
+     color: #FFFFFF;
+}
+.account a {
+    display: inline-block;
+}
 .arrow:after {
     content: url(../assets/svg/стрелка-вниз.svg);
     display: inline-block;
     width: 15px;
     height: 15px;
     margin-left: 4px;
-}
-
-.shopping-cart {
-    width: 35px;
-    height: 38px;
-    margin-right: 15px;
-    position: relative;
-    display: flex;
-    align-items: flex-end;
-}
-
-.shopping-cart:after {
-    position: absolute;
-    content: "";
-    background-image: url(../assets/svg/number.svg);
-    top: 0;
-    right: 0;
-    width: 20px;
-    height: 20px;
-}
-
-.account a {
-    display: inline-block;
 }
