--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,9 @@
 @use "sass:map";
+@import url(../assets/fonts/Gilroy/stylesheet.css);
 @import "normalize";
 @import "default";
 @import "header";
 @import "main";
-@import "variables";
+@import "basket";
 
 
