--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,6 @@
-$font-size: ("small": 16px, "regular":18px, "medium":22px, "large":24px );
+$font-size: ("small": 16px, "regular":18px,"normal":20px, "medium":22px, "large":24px );
 
-@mixin fontsSetting ($font-family,$font-style,$font-weight,$lh) {
-    font-family: $font-family;
-    font-style: $font-style;
+@mixin fontsSetting ($font-weight,$lh) {
     font-weight: $font-weight;
     line-height: $lh;
 }
