--- a/scss/_basket.scss
+++ b/scss/_basket.scss
@@ -105,7 +105,7 @@
                 text-align: center;
                 color: #4F4F4F;
                 border: none;
-
+                margin-left: 20px;
             }
         }
 
@@ -185,7 +185,14 @@
         cursor: pointer;
         border: none;
         margin-left: auto;
-        margin-bottom: 60px;
+        margin-right: 25px;
     }
+}
+
+.wrapper__backgr {
+    background-color: #FFFFFF;
+    padding-bottom: 60px;
+    border-radius: 10px;
+    border: 1px solid #F2F2F2;
 }
 
